feat(redis): add redis cache to user domain
